--- a/myp/src/main/webapp/jqury1.html
+++ b/myp/src/main/webapp/jqury1.html
@@ -11,7 +11,11 @@
   
   <script src="https://code.jquery.com/jquery-3.7.0.jsxxxxx"></script>
   
-  <script src="jquery3.0.js"></script>
+  <!--  이렇게 static 폴더에 있어도 됨.
+  <script src="js/jquery-3.3.1.js"></script>
+  -->
+  
+  <script src="./jquery3.0.js"></script>
   
 </head>
 <body>
