jquery 테스트 페이지 추가

--- a/myp/src/main/webapp/jqueryTest/jqueryTest.html
+++ b/myp/src/main/webapp/jqueryTest/jqueryTest.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="utf-8">
 
-    <script src="js/jquery3.7.1.js"></script>
+    <script src="./jquery3.7.1.js"></script> <!-- WEB-INF 하위 폴더가 아니므로 현재폴더의 경로를 써준다 -->
 
     <style type="text/css">
         .list {
