--- a/myp/src/main/webapp/vue3_pjt/vue3/index.html
+++ b/myp/src/main/webapp/vue3_pjt/vue3/index.html
@@ -9,5 +9,6 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    vscode에서 사용하는 index.htl 이다.
   </body>
 </html>
